--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : # 
   employer         : #"Hefei General Machinery Research Institute"
   pubmed           : 
-  googlescholar    : # "https://scholar.google.com/citations?user=WMkMTb4AAAAJ"
+  googlescholar    : # "https://scholar.google.com/citations?view_op=list_works&hl=zh-CN&hl=zh-CN&user=VA3G0FwAAAAJ"
   email            : "zhang-hy22@mails.tsinghua.edu.cn"
   researchgate     : # "https://www.researchgate.net/profile/Jian-Tang-53"
   uri              : 
@@ -37,13 +37,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/rattlesnakey"
+  github           : "rattlesnakey"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/hengyuan-zhang-117b4a236/" # e.g., "linkedin username"
+  linkedin         : "in/hengyuan-zhang-117b4a236/" # e.g., "linkedin username"
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
   orcid            : #"https://orcid.org/0000-0001-9658-209X"
   pinterest        :
