--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : # 
   employer         : #"Hefei General Machinery Research Institute"
   pubmed           : 
-  googlescholar    : # "https://scholar.google.com/citations?view_op=list_works&hl=zh-CN&hl=zh-CN&user=VA3G0FwAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=VA3G0FwAAAAJ&hl=zh-CN"
   email            : "zhang-hy22@mails.tsinghua.edu.cn"
   researchgate     : # "https://www.researchgate.net/profile/Jian-Tang-53"
   uri              : 
@@ -43,7 +43,7 @@ author:
   instagram        :
   impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "in/hengyuan-zhang-117b4a236/" # e.g., "linkedin username"
+  linkedin         : "hengyuanzhang88/" # e.g., "linkedin username"
   dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
   orcid            : #"https://orcid.org/0000-0001-9658-209X"
   pinterest        :
