--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
-  - title: "Education"
-    url: "/#-edu"
+  # - title: "Education"
+  #   url: "/#-edu"
 
   - title: "Internships"
     url: "/#-intern"
