--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : # 
   employer         : #"Hefei General Machinery Research Institute"
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=VA3G0FwAAAAJ&hl=zh-CN"
+  # googlescholar    : #"https://scholar.google.com/citations?user=VA3G0FwAAAAJ&hl=zh-CN"
   email            : "zhang-hy22@mails.tsinghua.edu.cn"
   researchgate     : # "https://www.researchgate.net/profile/Jian-Tang-53"
   uri              : 
