--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Hengyuan Zhang (张恒源)"
-description              : "Master's student (2nd year) at Tsinghua University. Focusing on domain-specific studies in NLP and data mining."
+description              : "Master's student at Tsinghua University. Focusing on domain-specific studies in NLP and data mining."
 repository               : "rattlesnakey/rattlesnakey.github.io"
 google_scholar_stats_use_cdn : false
 
