--- a/_config.yml
+++ b/_config.yml
@@ -57,6 +57,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
+  wechat           : images/wechat.png
 
 
 # Reading Files
