--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Hengyuan Zhang (张恒源)"
-description              : "PhD student at University of Hong Kong, actively seeking collaboration opportunities in LLM."
+description              : "PhD student at the University of Hong Kong, actively seeking collaboration opportunities in LLM."
 repository               : "rattlesnakey/rattlesnakey.github.io"
 google_scholar_stats_use_cdn : false
 
